--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,8 +27,9 @@
 
 
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/CSSRulePlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/CSSRulePlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js"></script>
 
 	{{- $transpiled := resources.Get "js/main.js" | babel  -}}
 	<script defer language="javascript" type="text/javascript"  src="{{ $transpiled.Permalink }}"></script>
