--- a/assets/scss/partials/_client.scss
+++ b/assets/scss/partials/_client.scss
@@ -18,7 +18,7 @@
     }
 
     &.menschenhandel {
-      background-color: #208776;
+      background-color: #8D304F;
     }
 
     &.helvetiarockt {
@@ -51,7 +51,8 @@
   }
 
   &.active {
-    padding-bottom: var(--spacing-md);
+    padding-bottom: var(--spacing-xl);
+    padding-top: var(--spacing-md);
 
     &.musicdirectory {
       background-color: #3535FF;
@@ -75,7 +76,7 @@
     }
 
     &.menschenhandel {
-      background-color: #208776;
+      background-color: #8D304F;
       color: var(--white);
 
       .client__button {
@@ -159,7 +160,7 @@
   &__button--close {
     position: absolute;
     top: 0;
-    right: 0;
+    right: var(--spacing-md);
     padding: var(--spacing-xs);
     width: var(--spacing-xl);
     height: var(--spacing-xl);
@@ -209,7 +210,7 @@
     background-color: var(--black);
     border-color: var(--black);
     color: var(--white);
-    transition: all 0.25s;
+    transition: all 0.4s;
     width: 65%;
     text-align: center;
 
@@ -227,6 +228,6 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: var(--spacing-sm);
-    margin-bottom: var(--spacing-sm);
+    margin-bottom: var(--spacing-md);
   }
 }
