--- a/assets/scss/partials/_section.scss
+++ b/assets/scss/partials/_section.scss
@@ -4,6 +4,7 @@
     font-family: "Habitas-Medium";
     text-align: right;
     text-transform: uppercase;
-    margin-bottom: var(--spacing-base);
+    margin-bottom: var(--spacing-xs);
+    padding-top: var(--spacing-lg);
   }
 }
