--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -15,13 +15,17 @@ $screen-xxl: "(min-width: 112.5em)";
 
 
 :root {
-  --bg-color: #000;
+  --bg-color: #151317;
   --text-color: #fff;
 
-  --black: #000;
+  --black: #151317;
+  --dark-grey: #46414a;
   --white: #fff;
 
   --lila: #B5A5C9;
+  --olive: #8D9C7B;
+  --blue: #623CEA;
+  --pink: #DB4270;
 
   --ratio: 1.125;
 
