--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -16,6 +16,12 @@
     font-size: 2vw;
     display: block;
     text-align: center;
+    transition: all 0.2s;
+
+    &:hover {
+      color: var(--blue);
+      transform: scale(1.1);
+    }
   }
 
   &__socials {
