--- a/assets/scss/partials/_quotes.scss
+++ b/assets/scss/partials/_quotes.scss
@@ -3,28 +3,77 @@
   flex-direction: column;
 
   &__item {
-    max-width: 75vw;
+    width: 70vw;
+    max-width: 850px;
     border: solid var(--white) 2px;
     padding: var(--spacing-sm);
+    position: relative;
 
     &:first-child {
-      margin-bottom: var(--spacing-md);
+      margin-top: var(--spacing-xl);
+      margin-bottom: var(--spacing-xl);
       align-self: flex-end;
-      padding-left: var(--spacing-lg);
+      padding-left: 5vw;
       padding-bottom: var(--spacing-xl);
-      margin-right: 5vw;
+      margin-right: 10vw;
+
+      &:after {
+        content: '';
+        position: absolute;
+        top: -1vw;
+        right: -1vw;
+        left: 1vw;
+        bottom: 1vw;
+        width: 100%;
+        height: 100%;
+        border: solid var(--lila) 2px;
+        z-index: -1;
+        transform: translate(0, 0);
+        transition: all 0.2s;
+      }
+
+      &:hover {
+        &:after {
+          content: '';
+          transform: translate(0.2vw, -0.2vw);
+        }
+      }
     }
 
     &:nth-child(2) {
-      padding-top: var(--spacing-lg);
+      padding-top: var(--spacing-xl);
       padding-right: var(--spacing-xl);
-      margin-left: 5vw;
+      margin-left: 10vw;
+      margin-bottom: var(--spacing-xl);
+      &:after {
+        content: '';
+        position: absolute;
+        top: 1vw;
+        right: 1vw;
+        left: -1vw;
+        bottom: -1vw;
+        width: 100%;
+        height: 100%;
+        border: solid var(--olive) 2px;
+        z-index: -1;
+        transform: translate(0, 0);
+        transition: all 0.2s;
+      }
+
+      &:hover {
+        &:after {
+          content: '';
+          transform: translate(-0.2vw, 0.2vw);
+        }
+      }
     }
   }
 
   &__person {
     font-family: "Habitas-Medium";
+    font-size: var(--spacing-sm);
     margin-top: var(--spacing-sm);
+    margin-bottom: 0;
     text-transform: uppercase;
   }
 }
