--- a/assets/scss/partials/_video.scss
+++ b/assets/scss/partials/_video.scss
@@ -1,5 +1,6 @@
 .video {
-  border: solid black 4px;
+  position: relative;
+  box-shadow: 0 var(--spacing-sm) var(--spacing-md) rgba(0,0,0,0.8);;
   padding-bottom: 48%;
   height: 0;
   width: 100%;
