--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -16,10 +16,13 @@ $screen-xxl: "(min-width: 112.5em)";
 
 :root {
   --bg-color: #151317;
+  --bg-color: #2c2a32;
   --text-color: #fff;
 
   --black: #151317;
+  --black: #2c2a32;
   --dark-grey: #46414a;
+  --dark-grey: #5A5666;
   --white: #fff;
 
   --lila: #B5A5C9;
