--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -3,36 +3,36 @@
 
   <div class="about">
     <p class="about__build about__item">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 82" class="about__icon">
-        <g fill="#623CEA" fill-rule="nonzero">
-          <path d="m64.469 21.333-22.614-6.705a2.344 2.344 0 0 0-2.914 1.581L25.575 61.284h.02a2.317 2.317 0 0 0 .07 1.575l7.479 17.638a2.344 2.344 0 0 0 3.544.973l15.19-11.147c.407-.306.703-.737.842-1.228h.02l13.302-44.86a2.344 2.344 0 0 0-1.573-2.902ZM36.302 75.945l-4.407-10.39 13.355 3.823-8.948 6.567Zm12.603-10.398L30.74 60.348 42.77 19.79l18.104 5.37-11.97 40.388ZM24.708 16.363a2.344 2.344 0 0 0-3.27-.536L1.922 29.839a2.344 2.344 0 0 0 0 3.808l19.515 14.012a2.344 2.344 0 0 0 2.735-3.807L7.308 31.742l16.864-12.11a2.344 2.344 0 0 0 .536-3.27ZM96.078 29.84 76.564 15.826a2.344 2.344 0 1 0-2.734 3.806l16.864 12.11L73.83 43.851a2.344 2.344 0 0 0 2.734 3.807l19.514-14.012a2.344 2.344 0 0 0 0-3.808ZM63.827 4.03 51.82.47a8.937 8.937 0 0 0-5.554.08 5.975 5.975 0 0 0-3.828 3.847L40.58 10.66c.8-.08 1.608-.005 2.38.223l2.245.666 1.733-5.822c.13-.44.692-.687.926-.772a4.314 4.314 0 0 1 2.623 0l12.005 3.56a4.314 4.314 0 0 1 2.203 1.423c.278.316.407.736.355 1.153l-1.719 5.82 2.249.668c.769.23 1.486.608 2.112 1.11l1.858-6.265a5.977 5.977 0 0 0-1.105-5.313 8.969 8.969 0 0 0-4.618-3.082Z"/></g>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 82" class="about__icon about__icon--code">
+        <g  fill-rule="nonzero">
+          <path fill="#623CEA" d="m64.469 21.333-22.614-6.705a2.344 2.344 0 0 0-2.914 1.581L25.575 61.284h.02a2.317 2.317 0 0 0 .07 1.575l7.479 17.638a2.344 2.344 0 0 0 3.544.973l15.19-11.147c.407-.306.703-.737.842-1.228h.02l13.302-44.86a2.344 2.344 0 0 0-1.573-2.902ZM36.302 75.945l-4.407-10.39 13.355 3.823-8.948 6.567Zm12.603-10.398L30.74 60.348 42.77 19.79l18.104 5.37-11.97 40.388ZM24.708 16.363a2.344 2.344 0 0 0-3.27-.536L1.922 29.839a2.344 2.344 0 0 0 0 3.808l19.515 14.012a2.344 2.344 0 0 0 2.735-3.807L7.308 31.742l16.864-12.11a2.344 2.344 0 0 0 .536-3.27ZM96.078 29.84 76.564 15.826a2.344 2.344 0 1 0-2.734 3.806l16.864 12.11L73.83 43.851a2.344 2.344 0 0 0 2.734 3.807l19.514-14.012a2.344 2.344 0 0 0 0-3.808ZM63.827 4.03 51.82.47a8.937 8.937 0 0 0-5.554.08 5.975 5.975 0 0 0-3.828 3.847L40.58 10.66c.8-.08 1.608-.005 2.38.223l2.245.666 1.733-5.822c.13-.44.692-.687.926-.772a4.314 4.314 0 0 1 2.623 0l12.005 3.56a4.314 4.314 0 0 1 2.203 1.423c.278.316.407.736.355 1.153l-1.719 5.82 2.249.668c.769.23 1.486.608 2.112 1.11l1.858-6.265a5.977 5.977 0 0 0-1.105-5.313 8.969 8.969 0 0 0-4.618-3.082Z"/></g>
       </svg>
       I build custom websites since more than 7 years each tailored to the specific need of the individual client. Every website I build has the end user in mind, is accessible, robust and easily maintanble.
     </p>
 
     <p class="about__help about__item">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92 92" class="about__icon">
-        <path d="M91.833 46a45.833 45.833 0 0 0-78.437-32.187h-.125c.004.055.004.11 0 .166-17.552 17.885-17.44 46.565.25 64.313v.125h.125c17.71 17.664 46.326 17.822 64.229.354h.167v-.125A45.833 45.833 0 0 0 91.833 46Zm-15.27 28.23L61.833 59.5c6.52-7.654 6.642-18.872.292-26.667l14.73-14.729C91.38 34.037 91.253 58.45 76.562 74.23ZM34.229 57.791c-6.231-6.548-6.108-16.868.277-23.265 6.386-6.397 16.707-6.539 23.265-.319 6.231 6.548 6.108 16.868-.277 23.265-6.386 6.397-16.707 6.539-23.265.319Zm39.584-42.646-14.73 14.729c-7.794-6.35-19.012-6.227-26.666.292L17.77 15.437C33.55.748 57.963.62 73.896 15.147h-.083Zm-58.959 3.27 14.75 14.772a20.833 20.833 0 0 0 .271 25.979l-14.73 14.729C.838 58.213.712 34.249 14.856 18.416Zm3.23 58.438 14.75-14.729a20.833 20.833 0 0 0 25.979.27l14.77 14.855c-15.842 14.136-39.807 14.01-55.5-.292v-.104Z" fill="#DB4270" fill-rule="nonzero"/>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92 92" class="about__icon about__icon--savety">
+        <path fill="#DB4270"  d="M91.833 46a45.833 45.833 0 0 0-78.437-32.187h-.125c.004.055.004.11 0 .166-17.552 17.885-17.44 46.565.25 64.313v.125h.125c17.71 17.664 46.326 17.822 64.229.354h.167v-.125A45.833 45.833 0 0 0 91.833 46Zm-15.27 28.23L61.833 59.5c6.52-7.654 6.642-18.872.292-26.667l14.73-14.729C91.38 34.037 91.253 58.45 76.562 74.23ZM34.229 57.791c-6.231-6.548-6.108-16.868.277-23.265 6.386-6.397 16.707-6.539 23.265-.319 6.231 6.548 6.108 16.868-.277 23.265-6.386 6.397-16.707 6.539-23.265.319Zm39.584-42.646-14.73 14.729c-7.794-6.35-19.012-6.227-26.666.292L17.77 15.437C33.55.748 57.963.62 73.896 15.147h-.083Zm-58.959 3.27 14.75 14.772a20.833 20.833 0 0 0 .271 25.979l-14.73 14.729C.838 58.213.712 34.249 14.856 18.416Zm3.23 58.438 14.75-14.729a20.833 20.833 0 0 0 25.979.27l14.77 14.855c-15.842 14.136-39.807 14.01-55.5-.292v-.104Z" fill-rule="nonzero"/>
       </svg>
       I offer help from the very beginning of a project with conceptualising, figuring out the target audience, wireframing, designing and can eventually build your website.
       After launching I'm happy to help you maintaining the website in a sustainable and lasting way.
     </p>
 
     <p class="about__heart about__item">
-
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 84" class="about__icon">
-        <g transform="translate(2 2)" stroke="#B5A5C9" fill="none" fill-rule="evenodd"><circle stroke-width="3" cx="40" cy="40" r="40"/><path stroke-width="2" fill="#B5A5C9" fill-rule="nonzero" d="M49.396 36.58 33.16 21.206 30.603 43.42"/><path d="M33.16 21.206 49.396 36.58l-2.555 22.214L30.603 43.42l2.557-22.214ZM40 78v-8 8ZM10 40H2h8Zm60 0h8-8ZM40 10V2v8Z" stroke-width="3"/>
+        <g transform="translate(2 2)" stroke="#B5A5C9" fill="none" fill-rule="evenodd">
+          <circle stroke-width="3" cx="40" cy="40" r="40"/>
+          <path stroke-width="2" fill="#B5A5C9" fill-rule="nonzero" d="M49.396 36.58 33.16 21.206 30.603 43.42" class="about__icon--help"/>
+          <path d="M33.16 21.206 49.396 36.58l-2.555 22.214L30.603 43.42l2.557-22.214ZM40 78v-8 8ZM10 40H2h8Zm60 0h8-8ZM40 10V2v8Z" stroke-width="3"/>
       </g>
     </svg>
-      I especially
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 74" class="about__love">
-        <path d="M88.585 14.535C86.391 8.097 82.796 2.903 72.736.667 54.906-3.295 45 12.554 45 12.554S35.094-3.295 17.264.667C7.204 2.903 3.609 8.096 1.415 14.535-2.017 24.61.83 37.731 9.56 47.334 23.868 63.073 45 73.969 45 73.969s21.132-10.896 35.44-26.635c8.729-9.603 11.577-22.724 8.145-32.799Z" fill="#DB4270" fill-rule="nonzero"/>
-      </svg>
-       to work with Non Profit Organisations and clients from the art and the cultural sector. I'm deeply concerned about the climate emergency. 
+      I
+      <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="about__love"><path style="text-indent:0;text-transform:none;direction:ltr;block-progression:tb;baseline-shift:baseline;color:#000;enable-background:accumulate" d="M67.22 971.381c-5.04 0-10.076 1.85-13.937 5.594l-3.312 3.188-3.25-3.157c-7.722-7.487-20.153-7.486-27.875 0-7.722 7.487-7.722 19.826 0 27.313 9.697 9.403 19.396 18.785 29.094 28.188a3 3 0 0 0 4.156 0l29.062-28.22c7.712-7.491 7.722-19.825 0-27.312-3.86-3.743-8.897-5.594-13.937-5.594zm0 5.97c3.53 0 7.076 1.314 9.782 3.937 5.41 5.246 5.408 13.433 0 18.687l-27 26.22c-9-8.727-18-17.463-27-26.189-5.411-5.246-5.411-13.44 0-18.687 5.41-5.246 14.12-5.246 19.531 0l5.375 5.188a3 3 0 0 0 4.157 0l5.406-5.22a13.957 13.957 0 0 1 9.75-3.937z" overflow="visible" transform="translate(0 -952.362)"/></svg>
+       to work with Non Profit Organisations and clients from the art and the cultural sector. I'm deeply concerned about the climate emergency.
     </p>
 
     <p class="about__contact about__item">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 76" class="about__icon">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 76" class="about__icon about__icon--hello">
         <path d="M38.14 31.07c.99 1.47-1.25 2.96-2.23 1.49-6.21-9.28-12.38-18.58-18.69-27.8-1.18-1.73-3.16-2.03-4.84-.9-1.66 1.12-2.12 3.06-.97 4.78l18.64 27.85c.98 1.46-1.25 2.96-2.23 1.49L12.87 15.64c-1.2-1.73-3.2-2.14-4.92-.99-1.67 1.11-2.1 3.03-.95 4.74l15.03 22.46c.98 1.47-1.25 2.96-2.23 1.49L8.87 27.01c-1.15-1.65-3.08-1.74-4.6-.69-1.48 1.03-1.98 2.74-.84 4.28 6.47 9.67 15.22 24.9 22.15 33.36 3.22 4.83 14.75 11.46 20.14 7.89L55 65.63c6.24-4.18 6.62-12.85 6.01-19.61l-3.56-31.29c-.22-1.92-1.36-3.68-3.41-3.56-1.58.09-2.69 1.28-2.65 2.89l.37 20.47c.02 1.32-1.71 1.88-2.45.77L29.26 5.23c-1.17-1.74-3.13-2.02-4.81-.9-1.68 1.11-2.15 3.06-1 4.79l14.69 21.95ZM20.58 4.93c.5-1.16 1.33-2.12 2.38-2.83 2.9-1.96 6.52-1.35 8.52 1.64L49 30.01l-.29-15.89c-.06-3.08 2.16-5.46 5.18-5.63 3.47-.2 5.84 2.55 6.22 5.94l3.57 31.35c.7 7.84-.01 17.28-7.18 22.08l-9.29 6.21c-6.8 4.5-19.8-2.55-23.86-8.62L1.26 32.18c-2.06-2.81-1.25-6.17 1.5-8.07.99-.68 2.18-1.11 3.39-1.16l-1.38-2.07c-2-2.99-1.23-6.52 1.7-8.46a6.47 6.47 0 0 1 3.51-1.1l-.8-1.19c-2-2.99-1.19-6.54 1.71-8.49 2.92-1.96 6.5-1.37 8.54 1.61l1.15 1.68Z" fill="#8D9C7B" fill-rule="nonzero"/>
       </svg>
       If you have something in mind I can help you with, drop me a line. I look forward to hear from you!
