--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 
 	<a href="">
-		<h1 class="header__title">N<span class="header__title--i">i</span>na Regl<span class="header__title--i">i</span></h1>
+		<h1 class="header__title">N<span class="header__title--i">i</span>na Regli</h1>
 		<h2 class="header__subtitle">{{ $.Site.Params.subtitle }}</h2>
 	</a>
 
