--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
-  <p>
+  <p class="intro__text">
     Hey there. I'm here to help you build your website.
   </p>
 </section>
