--- a/assets/scss/base/_mixins.scss
+++ b/assets/scss/base/_mixins.scss
@@ -1,28 +1,28 @@
 @mixin container($sides) {
 	@if $sides == left {
     padding-left: 5vw;
-    @media #{$screen-lg} {
+		@media #{$screen-sm} {
       padding-left: 8vw;
 		}
-		@media #{$screen-xxl} {
+		@media #{$screen-lg} {
       padding-left: calc((100vw - 800px)/2);
 		}
 	} @else if $sides == right {
       padding-right: 5vw;
-		@media #{$screen-lg} {
-      padding-right: 8vw;
+		@media #{$screen-sm} {
+      padding-left: 8vw;
 		}
-    @media #{$screen-xxl} {
+    @media #{$screen-lg} {
       padding-right: calc((100vw - 800px)/2);
 		}
 	} @else if $sides == both {
       padding-right: 5vw;
       padding-left: 5vw;
-      @media #{$screen-lg} {
+			@media #{$screen-sm} {
         padding-right: 8vw;
         padding-left: 8vw;
       }
-			@media #{$screen-xxl} {
+			@media #{$screen-lg} {
         padding-right: calc((100vw - 800px)/2);
         padding-left: calc((100vw - 800px)/2);
       }
