--- a/assets/scss/partials/_intro.scss
+++ b/assets/scss/partials/_intro.scss
@@ -3,4 +3,33 @@
   justify-content: center;
   align-items: center;
   min-height: 80vh;
+
+  &__text {
+    font-weight: 400;
+    position: relative;
+    color: var(--black);
+    padding: var(--spacing-lg);
+    border-style: solid;
+    border-width: var(--spacing-xs);
+    background-color: var(--white);
+    border-color: var(--white);
+    border-radius: 71% 29% 78% 22% / 35% 58% 42% 65%;
+
+    &:after {
+      content: '';
+      z-index: -1;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      background-color: var(--blue);
+      border-color: var(--blue);
+      border-width: var(--spacing-xs);
+      border-radius: 71% 29% 78% 22% / 35% 58% 42% 65%;
+      transform: translate(-1vw, 1.7vw);
+    }
+  }
 }
