--- a/assets/scss/partials/_quotes.scss
+++ b/assets/scss/partials/_quotes.scss
@@ -3,11 +3,14 @@
   flex-direction: column;
 
   &__item {
-    width: 70vw;
     max-width: 850px;
     border: solid var(--white) 2px;
     padding: var(--spacing-sm);
     position: relative;
+
+    @media #{$screen-sm} {
+      width: 70vw;
+    }
 
     &:first-child {
       margin-top: var(--spacing-xl);
@@ -26,7 +29,7 @@
         bottom: 1vw;
         width: 100%;
         height: 100%;
-        border: solid var(--lila) 2px;
+        border: solid var(--lila) 3px;
         z-index: -1;
         transform: translate(0, 0);
         transition: all 0.2s;
@@ -54,7 +57,7 @@
         bottom: -1vw;
         width: 100%;
         height: 100%;
-        border: solid var(--olive) 2px;
+        border: solid var(--olive) 3px;
         z-index: -1;
         transform: translate(0, 0);
         transition: all 0.2s;
